# packflow

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  INTENT.md  LICENSE  Makefile  README.md  appendix.html  genindex.html  getting-started.html  objects.inv  pyproject.toml  validation-testing.html
_modules/: index.html
_modules/packflow/: exceptions.html  logger.html
_modules/packflow/backend/: base.html  configuration.html  metrics.html  preprocessors.html  validation.html
_modules/packflow/loaders/: local.html  module.html
_modules/packflow/utils/normalize/: normalize.html
_sources/: validation-testing.rst.txt
_sources/api-reference/auto/: packflow.loaders.rst.txt  packflow.utils.normalize.rst.txt  packflow.utils.rst.txt
_sources/backends/: custom-backends.rst.txt  preprocessor-configuration.rst.txt
_sources/concepts/: packflow-framework.rst.txt
api-reference/: cli.html
api-reference/auto/: packflow.loaders.html  packflow.utils.html
backends/: custom-backends.html  preprocessor-configuration.html
docs/: Makefile  requirements.txt
docs/source/: conf.py  distribution.rst  getting-started.rst  index.rst  robots.txt  validation-testing.rst
docs/source/_static/: custom.css
docs/source/_templates/: versions.html
docs/source/api-reference/auto/: modules.rst
docs/source/backends/: advanced-usage.rst  custom-backends.rst  preprocessor-configuration.rst
docs/source/code-examples/getting-started/: inference.py  validate.py
docs/source/code-examples/usage/: example-config.json  extending-config-model.py  print-backend.py
docs/source/code-examples/user-guides/numpy-math/: main.py  validate.py
docs/source/concepts/: about-packflow.rst  packflow-framework.rst  packflow-structure.rst
docs/source/examples/: index.rst
docs/source/examples/notebooks/sklearn-classifier/: sklearn-classifier.ipynb
examples/notebooks/inference-backend-101/: inference-backend-101.html
src/packflow/: __init__.py  _frames.py  _splash.py  cli.py  constants.py  exceptions.py  logger.py  project.py
src/packflow/backend/: __init__.py  base.py  configuration.py  metrics.py  preprocessors.py  validation.py
src/packflow/data/templates/minimal/: MODEL_CARD.md  README.md  inference.py  packflow.yaml  test_inference.py  validate.py
src/packflow/loaders/: __init__.py  base.py  config.py  local.py  module.py  utils.py
src/packflow/utils/: __init__.py  data.py
src/packflow/utils/normalize/: __init__.py  base.py  handlers.py  normalize.py
tests/: helpers.py  test_cli.py  test_project.py
tests/backend/: test_backend_base.py  test_backend_configuration.py  test_backend_preprocessors.py  test_backend_validate.py  test_nested_field_preprocessing.py
tests/loaders/: test_base_loader.py  test_config.py  test_local_loader.py  test_module_loader.py  test_utils.py
tests/resources/: inference.py  invalid-config.json  valid-config.json
tests/utils/: test_data.py
tests/utils/normalize/: test_normalize_base.py  test_normalize_handlers.py  test_normalize_normalize.py
tools/: bake_frames.py  splash_render.py
